# yer-face

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
CMakeModules/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindFFmpeg.cmake  FindPocketSphinx.cmake
ci/: branch.sh  build.Linux.sh  build.Windows.ps1  buildspec.Linux.yaml  upload.Linux.sh  upload.Windows.sh  version.sh
ci/data/: latest.Linux.html  latest.Windows.html
ci/util/: htmlescape.py  urlencode.py
data/: config.json  yer-face-config.json
data/dlib-models/: README.md
data/dlib-shape-predictor/: README.md
data/haarcascades/: README.md
data/sphinx-models/: README.md
data/sphinx-models/en-us/en-us/: README  feat.params  mdef  means  noisedict  sendump  transition_matrices  variances
data/test-videos/: HiHowAreYou.mkv  QuickBrownFox.mkv  README.md  What.mkv
doc/: Blender.md  CommandLineUsage.md  Compiling.md  Dependencies.md  DependenciesFedora.md  DependenciesUbuntu.md  EventData.md  ExampleScriptlets.md  Examples.md  PaintsAndColors.md  Roadmap.md  SystemRequirements.md  WebSockets.md
src/: EventLogger.cpp  EventLogger.hpp  EyeTracker.cpp  EyeTracker.hpp  EyesTracker.cpp  EyesTracker.hpp  FFmpegDriver.cpp  FFmpegDriver.hpp  FaceClassifier.cpp  FaceClassifier.hpp  FaceDetector.cpp  FaceDetector.hpp  FaceMapper.cpp  FaceMapper.hpp  FaceTracker.cpp  FaceTracker.hpp  FrameDerivatives.cpp  FrameDerivatives.hpp  FrameServer.cpp  FrameServer.hpp  GPUUtils.cu  GPUUtils.hpp  ImageSequence.cpp  ImageSequence.hpp  Logger.cpp  Logger.hpp  MapMarkers.cpp  MapMarkers.hpp  MarkerMapper.cpp  MarkerMapper.hpp  MarkerSeparator.cpp  MarkerSeparator.hpp  MarkerTracker.cpp  MarkerTracker.hpp  MarkerType.cpp  MarkerType.hpp  Metrics.cpp  Metrics.hpp  OutputDriver.cpp  OutputDriver.hpp  (+19 more)
test/: adder.test.cpp
